--- a/HTML.html
+++ b/HTML.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
+<html style="background-color: black;">
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE-edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="HTML.css">
 		<title>HTML</title>
 	</head>
 	<body>
-		<h1><center>Anales de la Ciencia</center></h1><br/>
-		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/index.html" title="INICIO">INICIO</a></br>
-		<h2>HTML</h2>
-		<iframe height="600px" width="50%" src="https://es.wikipedia.org/wiki/HTML" align="right"></iframe>
-		<p>29 de octubre de 1991</p>
-		<img src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/9281136/image/3bd7dc1fbdc52576c993caa69e47891e" height="20%" width="20%"/></br>
-		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/Tim%20Berners%20Lee.html" title="Tim Berners Lee"><img src="https://i.blogs.es/3ef43a/tim-berners-lee/1366_2000.jpg" width="10%" height="10%"/></a>
+		<h1 class="h1">Anales de la Ciencia</h1>
+		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/index.html" title="INICIO" style="color: white; margin-left: 125px;">INICIO</a></br>
+		<aside>
+			<iframe height="550px" width="35%" src="https://es.wikipedia.org/wiki/HTML" class="iframe"></iframe>
+		</aside>>
+		<section>
+			<h2 class="text">HTML</h2>
+			<p class="text">29 de octubre de 1991</p>
+			<img src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/9281136/image/3bd7dc1fbdc52576c993caa69e47891e"height="225px" width="320px" class="img"/></br>
+		</section>>
+		<footer>
+			<img src="	https://rinconeducativo.org/sites/default/files/cern_logo.jpg" width="3%" height="3%" />
+			<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/Tim%20Berners%20Lee.html" title="Tim Berners Lee"><img src="https://i.blogs.es/3ef43a/tim-berners-lee/1366_2000.jpg" width="3%" height="3%" class="img"/></a>
+		</footer>
 	</body>
 </html>
