--- a/HTML.html
+++ b/HTML.html
@@ -1,27 +1,48 @@
+<!-- Ana Lucero Cueva y Miguel Perez Fernandez -->
 <!DOCTYPE html>
 <html lang="en">
-<html style="background-color: black;">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE-edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="index.css">
-		<title>HTML</title>
-	</head>
-	<body>
-		<h1 class="h1">Anales de la Ciencia</h1>
-		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/index.html" title="INICIO" style="color: white; margin-left: 125px;">INICIO</a></br>
-		<aside>
-			<iframe height="550px" width="35%" src="https://es.wikipedia.org/wiki/HTML" class="iframe"></iframe>
-		</aside>>
-		<section>
-			<h2 class="text">HTML</h2>
-			<p class="text">29 de octubre de 1991</p>
-			<img src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/9281136/image/3bd7dc1fbdc52576c993caa69e47891e"height="225px" width="320px" class="img"/></br>
-		</section>>
-		<footer>
-			<img src="	https://rinconeducativo.org/sites/default/files/cern_logo.jpg" width="3%" height="3%" />
-			<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/Tim%20Berners%20Lee.html" title="Tim Berners Lee"><img src="https://i.blogs.es/3ef43a/tim-berners-lee/1366_2000.jpg" width="3%" height="3%" class="img"/></a>
-		</footer>
-	</body>
+<html>
+<head>
+
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE-edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="html.css">
+
+	<title>HTML</title>
+
+</head>
+<body>
+	<header>
+		<h1>Anales de la Ciencia</h1><br/>
+	</header>
+
+	<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/index.html" title="INICIO">INICIO</a>
+	<br>
+	<br>
+
+
+	<div class="info">
+		<h2>HTML</h2>
+		<p>29 de octubre de 1991</p>
+		<img class="imagen" src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/9281136/image/3bd7dc1fbdc52576c993caa69e47891e" />
+	</div>
+
+	<div class="frame">
+		<iframe  src="https://es.wikipedia.org/wiki/HTML" ></iframe>
+	</div>
+
+	
+
+	
+
+	<footer>
+		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/Tim%20Berners%20Lee.html" title="Tim Berners Lee" >
+			<img class="Berners" src="https://i.blogs.es/3ef43a/tim-berners-lee/1366_2000.jpg" />
+		</a>
+
+		<img class="cern" src="https://rinconeducativo.org/sites/default/files/cern_logo.jpg"/>
+
+	</footer>
+</body>
 </html>
