Funcion login y logout

--- a/HTML.html
+++ b/HTML.html
@@ -17,7 +17,7 @@
 		<h1>Anales de la Ciencia</h1><br/>
 	</header>
 
-	<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/index.html" title="INICIO">INICIO</a>
+	<a  href="file:///C:/Users/Admin/Documents/TERCERO/Segundo%20Semestre/TDW/HTML/index.html" title="INICIO">INICIO</a>
 	<br>
 	<br>
 
@@ -37,7 +37,7 @@
 	
 
 	<footer>
-		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/Tim%20Berners%20Lee.html" title="Tim Berners Lee" >
+		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/Tim%20Berners%20Lee.html" title="Tim Berners Lee" >
 			<img class="Berners" src="https://i.blogs.es/3ef43a/tim-berners-lee/1366_2000.jpg" />
 		</a>
 
