--- a/Tim Berners Lee.html
+++ b/Tim Berners Lee.html
@@ -16,7 +16,7 @@
 			<h1>Anales de la Ciencia</h1><br/>
 		</header >
 		
-		<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/index.html" title="INICIO">INICIO</a></br>
+		<a  href="file:///C:/Users/Admin/Documents/TERCERO/Segundo%20Semestre/TDW/HTML/index.html" title="INICIO" >INICIO</a></br>
 		
 		<div class="info">
 			<h2>Tim Berners Lee</h2>
@@ -26,12 +26,12 @@
 		</div>
 		
 		<div class="frame">
-			<iframe  src="https://es.wikipedia.org/wiki/Tim_Berners-Lee" ></iframe>
+			<iframe  src="https://es.wikipedia.org/wiki/Tim_Berners-Lee" align="right"></iframe>
 		</div>
 
 		<footer>
 			
-			<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/TDW/HTML.html" title="HTML">
+			<a href="file:///D:/Mike%20Uni/3%20Curso/TDW/Ejercicio%20HTML/HTML.html" title="HTML">
 				<img class="cern"src="https://s3.amazonaws.com/s3.timetoast.com/public/uploads/photo/9281136/image/3bd7dc1fbdc52576c993caa69e47891e" />
 			</a>
 			<img class="Berners" src="	https://rinconeducativo.org/sites/default/files/cern_logo.jpg"/>
